--- a/src/index.html
+++ b/src/index.html
@@ -90,9 +90,9 @@
 				@include('partials/hero.html')
 				@include('partials/about.html')
 				@include('partials/programs.html')
-				@include('partials/additional-services.html')
+				@include('partials/gallery.html')
 				@include('partials/partners.html')
-				@include('partials/contacts.html')
+				@include('partials/footer.html')
 			</main>
 		</div>
 	</body>
