--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
 				@include('partials/about.html')
 				@include('partials/programs.html')
 				@include('partials/gallery.html')
-				@include('partials/partners.html')
+				@include('partials/clients.html')
 				@include('partials/footer.html')
 			</main>
 		</div>
